@@ -1,3 +1,8 @@
+Mon Aug 18 21:58:25 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
+
+*	* session.scm: New file: Session support.
+	(apropos): New procedure: List bindings given regexp.
+
 Sat Aug 16 18:44:24 1997  Gary Houston  <ghouston@actrix.gen.nz>
 
 	* boot-9.scm: define tms accessors: clock, utime, stime, cutime,
